# 4mation

./: .gitignore  README.md  lancer_solveur.bat  nginx_4mation.conf  requirements.txt
4mation_dashboard_deploy/: index.html  solver.html
4mation_dashboard_deploy/assets/: index-Bxha6-Gd.css  index-CMHRxfEX.js  index-CghsbFdc.css  index-l1ZQL4Fq.js  index-ti-wK4Iv.js  main-4NEwJpkv.js  main-AsvF4G3e.js  main-B6ySOL_l.js  main-B8k2qOG-.js  main-B9MxmRth.css  main-BJUbXOuW.js  main-BPMM4bus.css  main-BeOaunPl.css  main-CYWES8CB.js  main-DSSsA-ml.js  main-Do9Upeu8.js  main-DqTH6fkM.css  main-DtQsWKhF.js  main-lw36LKZe.js  solver-54gR24ey.css  solver-BBpH93xJ.js  solver-BNe4WkYj.js  solver-C1GetLdZ.js  solver-CCmBjKVQ.js  solver-CKX9sjE_.js  solver-COTds9VJ.js  solver-DZWa0D0d.js  solver-kCu9jhft.js  style-B3EHp4fn.css  style-BTTbiDAI.css  (+1 more)
4mation_dashboard_dev/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  solver.html  tsconfig.json  vite.config.js  vite.config.ts
api/: .env.example  README.md  __init__.py  app.py  gunicorn_config.py  realtime_server.py  requirements.txt
deploy/: docker-compose.solver.yml  docker-compose.vps.yml  nginx-4mation.conf.template
script/: README.md  build_hard_parallel.py  build_puzzle_pack.py  evaluate.py  test_mcts_advisor.py  test_model.py  test_optimized_minimax.py  test_tablebase.py  train.py
script/rl_rust/: .gitignore  Cargo.toml  README.md  eval_minimax.py
script/rl_rust/src/: eval.rs  features.rs  game_session.rs  imitation.rs  lib.rs  mcts.rs  persistence.rs  policy.rs  self_play.rs  trainer.rs
script/solver_rust/: Cargo.toml  README.md  local_dashboard.py
script/solver_rust/src/: api_client.rs  dashboard_main.rs  explorer.rs  game.rs  hasher.rs  lib.rs  local_db.rs  local_engine.rs  local_main.rs  main.rs  opening_book.rs  result_table.rs  solver.rs  symmetry.rs  work.rs  zobrist_keys.inc
script/solver_rust/src/dashboard/: engine.rs  mod.rs  process.rs  server.rs  stats.rs
script/solver_rust/web/: index.html  solver.js  style.css
scripts/: _db_compose.py  _db_snapshot.py  _db_stats.py  _empty_full.py  _empty_histogram.py  _pending_empty_dist.py  _wq_reset_in_progress.py  _wq_status.py  activate_symmetry_fresh.bat  deploy_vps.sh  free_dashboard_port.bat  free_listen_port.ps1  run_bootstrap_endgame.bat  run_local_dashboard.bat  run_local_solver_rust.bat  run_local_solver_stack.bat  run_local_worker.bat  run_local_worker.cmd  run_local_worker.ps1  run_local_worker_rust.bat  run_opening_book_full.bat  run_rl_train.ps1  run_solver_server.sh  solver_feedback_loop.ps1
(+155 files in other folders)
