[package]
name = "formation-worker"
version = "0.2.0"
edition = "2021"
description = "Solveur 4mation haute performance (local + worker HTTP optionnel)"

[[bin]]
name = "4mation-worker"
path = "src/main.rs"

[[bin]]
name = "4mation-local"
path = "src/local_main.rs"

[[bin]]
name = "4mation-dashboard"
path = "src/dashboard_main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
hostname = "0.4"
rand = "0.8"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
